:recycle: clean code part 2